--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,28 +5,14 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 
-	<filter>
-		<filter-name>MyFilter</filter-name>
-		<filter-class>com.getjavajobs.library.webui.MyFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>MyFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
 	<servlet>
-		<servlet-name>ReaderServlet</servlet-name>
-		<servlet-class>com.getjavajobs.library.webui.ReaderServlet</servlet-class>
-		<init-param>
-			<param-name>pathToFile</param-name>
-			<param-value>jdbc.properties</param-value>
-		</init-param>
+		<servlet-name>readers.jsp</servlet-name>
+		<jsp-file>/WEB-INF/jsp/readers.jsp</jsp-file>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>ReaderServlet</servlet-name>
-		<url-pattern>/readers/*</url-pattern>
+		<servlet-name>readers.jsp</servlet-name>
+		<url-pattern>/readers</url-pattern>
 	</servlet-mapping>
 
 </web-app>
