--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,24 @@
 		<url-pattern>/readers</url-pattern>
 	</servlet-mapping>
 
+    <servlet>
+        <servlet-name>books.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/books.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>books.jsp</servlet-name>
+        <url-pattern>/books</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>addbook.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/addbook.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>addbook.jsp</servlet-name>
+        <url-pattern>/addbook</url-pattern>
+    </servlet-mapping>
+
 </web-app>
