--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,16 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
-
+    <servlet>
+        <servlet-name>borrow.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/borrow.jsp</jsp-file>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>borrow.jsp</servlet-name>
+        <url-pattern>/borrows/*</url-pattern>
+    </servlet-mapping>
+    
 	<servlet>
 		<servlet-name>readers.jsp</servlet-name>
 		<jsp-file>/WEB-INF/jsp/readers.jsp</jsp-file>
