Added AuthorServlet( override doPost). Fixed authors.jsp & authorAdd.jsp.
Problems needed to solve:
in authors.jsp :
the value for the usebean class attribute is invalid

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,15 @@
 		<url-pattern>/readers</url-pattern>
 	</servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>authors.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/authors.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>authors.jsp</servlet-name>
+        <url-pattern>/WEB-INF/jsp/authors.jsp</url-pattern>
+    </servlet-mapping>
+
 </web-app>
