--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,17 @@
 	</servlet-mapping>
 
     <servlet>
+        <servlet-name>authors.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/authors.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>authors.jsp</servlet-name>
+        <url-pattern>/authors</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
         <servlet-name>books.jsp</servlet-name>
         <jsp-file>/WEB-INF/jsp/books.jsp</jsp-file>
     </servlet>
