--- a/pom.xml
+++ b/pom.xml
@@ -5,39 +5,20 @@
   <groupId>com.getjavajobs.library</groupId>
   <artifactId>library</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <name>Library</name>
   <description>This is our first Web project in getJavaJob</description>
+
+  <modules>
+    <module>server</module>
+    <module>desktopui</module>
+    <module>webapp</module>
+  </modules>
 
   <properties>
     <mysql.version>5.1.33</mysql.version>
 	<junit.version>4.11</junit.version>
   </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>3.0-alpha-1</version>
-      <scope>provided</scope>
-    </dependency>
-      <dependency>
-          <groupId>jstl</groupId>
-          <artifactId>jstl</artifactId>
-          <version>1.2</version>
-      </dependency>
-    <dependency>
-	  <groupId>junit</groupId>
-	  <artifactId>junit</artifactId>
-	  <version>${junit.version}</version>
-	  <scope>test</scope>
-    </dependency>
-  </dependencies>
 
   <build>
     <plugins>
