--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -64,5 +64,36 @@
         <servlet-name>changebooksevlet</servlet-name>
         <url-pattern>/library/changebook</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>genre.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/genre.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>genre.jsp</servlet-name>
+        <url-pattern>/genre</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>changegenre.jsp</servlet-name>
+        <jsp-file>/WEB-INF/jsp/changegenre.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>changegenre.jsp</servlet-name>
+        <url-pattern>/changegenre.jsp</url-pattern>
+    </servlet-mapping>
+    
+    
+    <servlet>
+        <servlet-name>genresevlet</servlet-name>
+        <servlet-class>com.getjavajobs.library.webui.GenreServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>genresevlet</servlet-name>
+        <url-pattern>/genresevlet</url-pattern>
+    </servlet-mapping>
 
 </web-app>
