--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -30,6 +30,16 @@
       <version>1.2</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${org.springframework.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
