Добавил в класс Book флаг isFree для получения информации, выдана или занята книга. Соответствующим образом реорганизовал BookService и BookDao, появился метод getFree(), который возвращает список свободных книг. Восстановил jsp-страничку для добавления выдачи и соответственно, пропсал в web-xml. В классах AuthorDao и BookDao также изменил логику в соответствии с концепцией Spring

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>addborrow</servlet-name>
+        <jsp-file>/WEB-INF/jsp/addBorrow.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addborrow</servlet-name>
+        <url-pattern>/addborrow</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>readers.jsp</servlet-name>
         <jsp-file>/WEB-INF/jsp/readers.jsp</jsp-file>
     </servlet>
@@ -155,5 +164,6 @@
         <servlet-name>AuthorServlet</servlet-name>
         <url-pattern>/authorServlet</url-pattern>
     </servlet-mapping>
+
 
 </web-app>
