try to read data from entered string ( don't work and needed to  be fixed) Changed  to <url-pattern>/AuthorServlet</url-pattern> fixed action in .jsp

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -162,7 +162,7 @@
 
     <servlet-mapping>
         <servlet-name>AuthorServlet</servlet-name>
-        <url-pattern>/authorServlet</url-pattern>
+        <url-pattern>/AuthorServlet</url-pattern>
     </servlet-mapping>
 
 
