--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,7 +40,13 @@
         <artifactId>spring-webmvc</artifactId>
         <version>${org.springframework.version}</version>
     </dependency>
-  </dependencies>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${org.springframework.version}</version>
+  </dependency>
+
+</dependencies>
 
 
 </project>
