--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:library-context.xml</param-value>
+        <param-value>classpath:library-web-context.xml</param-value>
     </context-param>
 
     <listener>
