--- a/server/pom.xml
+++ b/server/pom.xml
@@ -56,6 +56,18 @@
           <artifactId>spring-tx</artifactId>
           <version>4.1.1.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>3.0.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+          <version>3.0.5.RELEASE</version>
+      </dependency>
+
+
 
       <!--
       <dependency>
