--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,25 @@
  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-    <context-param>
+    <!-- <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:library-web-context.xml</param-value>
     </context-param>
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+    </listener> -->
+
+	<servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/readers</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>borrow.jsp</servlet-name>
@@ -31,16 +42,6 @@
     <servlet-mapping>
         <servlet-name>addborrow</servlet-name>
         <url-pattern>/addborrow</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>readers.jsp</servlet-name>
-        <jsp-file>/WEB-INF/jsp/readers.jsp</jsp-file>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>readers.jsp</servlet-name>
-        <url-pattern>/readers</url-pattern>
     </servlet-mapping>
 
     <servlet>
