--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -1,47 +1,52 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-	<groupId>com.getjavajobs.library</groupId>
-	<artifactId>library</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>library-webapp</artifactId>
-  <packaging>war</packaging>
-  <name>Library Web UI</name>
-  <description>Web UI Module</description>
+    <parent>
+        <groupId>com.getjavajobs.library</groupId>
+        <artifactId>library</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
-  <dependencies>
-    <dependency>
-	  <groupId>com.getjavajobs.library</groupId>
- 	  <artifactId>library-server</artifactId>
-	  <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>3.0-alpha-1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${org.springframework.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>${org.springframework.version}</version>
-    </dependency>
+    <artifactId>library-webapp</artifactId>
+    <packaging>war</packaging>
+    <name>Library Web UI</name>
+    <description>Web UI Module</description>
 
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.getjavajobs.library</groupId>
+            <artifactId>library-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+    </dependencies>
 
 
 
