--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,11 @@
 	    <artifactId>cglib</artifactId>
 	    <version>3.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aspects</artifactId>
+          <version>${org.springframework.version}</version>
+      </dependency>
     <!-- Hibernate -->
     <dependency>
         <groupId>org.hibernate</groupId>
