--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:mvc="http://www.springframework.org/schema/mvc"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
@@ -13,6 +13,7 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener> -->
+
 
 	<servlet>
         <servlet-name>dispatcher</servlet-name>
@@ -97,10 +98,7 @@
         <jsp-file>/WEB-INF/jsp/authorAdd.jsp</jsp-file>
     </servlet>
 
-    <servlet>
-        <servlet-name>AuthorServlet</servlet-name>
-        <servlet-class>com.getjavajobs.library.webui.AuthorServlet</servlet-class>
-    </servlet>
+
 
     <servlet-mapping>
         <servlet-name>authors.jsp</servlet-name>
@@ -112,10 +110,13 @@
         <url-pattern>/authorAdd</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>AuthorServlet</servlet-name>
-        <url-pattern>/AuthorServlet</url-pattern>
-    </servlet-mapping>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/mvc-dispatcher-servlet.xml
+        </param-value>
+    </context-param>
 
 
 </web-app>
