--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -13,6 +13,11 @@
   <description>Web UI Module</description>
 
   <dependencies>
+  	<dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-collections4</artifactId>
+    	<version>4.0</version>
+	</dependency>
     <dependency>
 	  <groupId>com.getjavajobs.library</groupId>
  	  <artifactId>library-server</artifactId>
@@ -40,7 +45,17 @@
         <artifactId>spring-webmvc</artifactId>
         <version>${org.springframework.version}</version>
     </dependency>
-
+	<!-- Jackson -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.3.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.3.0</version>
+	</dependency>
   </dependencies>
 
 
